UWM-CMS: Ensure no overflow on mobile devices

--- a/docroot/themes/custom/uwmed/src/components/locations/locations.scss
+++ b/docroot/themes/custom/uwmed/src/components/locations/locations.scss
@@ -244,8 +244,7 @@ body.page-node-type-uwm-clinic {
           .uw-ico {
             display: none;
           }
-
-          margin: 0 15px;
+          
           border-bottom: 1px solid #dcdcdc;
 
         }
